--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
   <section class="hero">
     <div class="container">
       <h1 class="hero-title">Efektywne rozwiązania dla waszego biznesu</h1>
-      <button type="button" class="button">Zamów usługę</button>
+      <button type="button" data-modal-open class="button">Zamów usługę</button>
     </div>
   </section>
-  
+
   <section class="section">
     <div class="container">
-  
       <ul class="link-ul section-item section-ul-headline">
         <li class="section-li">
           <div class="headline-div">
@@ -116,24 +115,34 @@
       </ul>
     </div>
   </section>
-  
+
   <section class="section section-padding">
     <div class="container">
       <h2 class="section-title wort-item">Czym się zajmujemy</h2>
       <ul class="link-ul section-item section-ul-photo">
         <li class="section-photo">
-          <img src="./images/box-1.jpg" alt="biurko" width="370" height="294" />
+          <div>
+
+            <img src="./images/box-1.jpg" alt="biurko" width="370" height="294" />
+            <p class="overlay-photo">Aplikacje komputerowe</p>
+          </div>
         </li>
         <li class="section-photo">
-          <img src="./images/box-2.jpg" alt="laptop" width="370" height="294" />
+          <div>
+            <img src="./images/box-2.jpg" alt="laptop" width="370" height="294" />
+            <p class="overlay-photo">Aplikacje mobilne</p>
+          </div>
         </li>
         <li class="section-photo">
-          <img src="./images/box-3.jpg" alt="tablet" width="370" height="294" />
+          <div>
+            <img src="./images/box-3.jpg" alt="tablet" width="370" height="294" />
+            <p class="overlay-photo">Rozwiązania graficzne</p>
+          </div>
         </li>
       </ul>
     </div>
   </section>
-  
+
   <section class="section comand-fon">
     <div class="container">
       <h2 class="section-title comand-item">Nasz zespół</h2>
@@ -158,7 +167,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Facebook">
                   <svg class="contact-icon" width="20" height="20">
@@ -166,7 +175,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Linkedin">
                   <svg class="contact-icon" width="20" height="20">
@@ -197,7 +206,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Facebook">
                   <svg class="contact-icon" width="20" height="20">
@@ -205,7 +214,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Linkedin">
                   <svg class="contact-icon" width="20" height="20">
@@ -236,7 +245,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Facebook">
                   <svg class="contact-icon" width="20" height="20">
@@ -244,7 +253,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Linkedin">
                   <svg class="contact-icon" width="20" height="20">
@@ -275,7 +284,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Facebook">
                   <svg class="contact-icon" width="20" height="20">
@@ -283,7 +292,7 @@
                   </svg>
                 </a>
               </li>
-  
+
               <li class="section-web">
                 <a class="contacts-link" href="#" aria-label="Link do Linkedin">
                   <svg class="contact-icon" width="20" height="20">
@@ -297,7 +306,7 @@
       </ul>
     </div>
   </section>
-  
+
   <!-- Partners -->
   <section class="partner section">
     <div class="container">
@@ -351,63 +360,63 @@
   </main>
 
   <!--footer-->
-      <footer class="footer">
-        <div class="container box">
-          <div class="box-one">
-            <a class="logo-footer" href="./index.html">
-              <span class="logo-style">Web</span>Studio</a>
-            <address>
-              <ul class="link-ul section-item-footer">
-                <li class="footer-text section-footer">
-                  <a href="https://goo.gl/maps/VcPTf6uv3HtVNKEU8" target="_blank" rel="noopener noreferrer"
-                    class="footer-address link-a-href">m. Warszawa, Aleje Jerozolimskie 21
-                  </a>
-                </li>
-                <li class="section-footer">
-                  <a href="tel:+48111111111" class="footer-phone link-a-href">+48 111 111 111</a>
-                </li>
-                <li class="section-footer">
-                  <a href="mailto:info@example.com" class="footer-mail link-a-href">info@devstudio.com</a>
-                </li>
-              </ul>
-            </address>
-          </div>
-      
-          <div class="container-join">
-            <h2 class="footer-text">Dołącz do nas</h2>
-            <ul class="link-ul join-ul section-item-footer">
-              <li class="join-title section-footer">
-                <a class="join-link" href="#" aria-label="link do Instagram">
-                  <svg class="join-icon" width="20" height="20">
-                    <use href="./images/sprite/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="join-title section-footer">
-                <a class="join-link" href="#" aria-label="link do Twitter">
-                  <svg class="join-icon" width="20" height="20">
-                    <use href="./images/sprite/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="join-title section-footer">
-                <a class="join-link" href="#" aria-label="link do Facebook">
-                  <svg class="join-icon" width="20" height="20">
-                    <use href="./images/sprite/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="join-title section-footer">
-                <a class="join-link" href="#" aria-label="Link do Linkedin">
-                  <svg class="join-icon" width="20" height="20">
-                    <use href="./images/sprite/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </footer>
+  <footer class="footer">
+    <div class="container box">
+      <div class="box-one">
+        <a class="logo-footer" href="./index.html">
+          <span class="logo-style">Web</span>Studio</a>
+        <address>
+          <ul class="link-ul section-item-footer">
+            <li class="footer-text section-footer">
+              <a href="https://goo.gl/maps/VcPTf6uv3HtVNKEU8" target="_blank" rel="noopener noreferrer"
+                class="footer-address link-a-href">m. Warszawa, Aleje Jerozolimskie 21
+              </a>
+            </li>
+            <li class="section-footer">
+              <a href="tel:+48111111111" class="footer-phone link-a-href">+48 111 111 111</a>
+            </li>
+            <li class="section-footer">
+              <a href="mailto:info@example.com" class="footer-mail link-a-href">info@devstudio.com</a>
+            </li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="container-join">
+        <h2 class="footer-text">Dołącz do nas</h2>
+        <ul class="link-ul join-ul section-item-footer">
+          <li class="join-title section-footer">
+            <a class="join-link" href="#" aria-label="link do Instagram">
+              <svg class="join-icon" width="20" height="20">
+                <use href="./images/sprite/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="join-title section-footer">
+            <a class="join-link" href="#" aria-label="link do Twitter">
+              <svg class="join-icon" width="20" height="20">
+                <use href="./images/sprite/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="join-title section-footer">
+            <a class="join-link" href="#" aria-label="link do Facebook">
+              <svg class="join-icon" width="20" height="20">
+                <use href="./images/sprite/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="join-title section-footer">
+            <a class="join-link" href="#" aria-label="Link do Linkedin">
+              <svg class="join-icon" width="20" height="20">
+                <use href="./images/sprite/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
