--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           <span class="logo-style">Web</span>Studio</a>
         <ul class="site-nav link-ul section-item">
           <li class="section-nav">
-            <a class="site-nav current link-a-href" href="./index.html">Agencja</a>
+            <a class="site-nav current link-a-href section-after" href="./index.html">Agencja</a>
           </li>
           <li class="section-nav">
-            <a class="site-nav link-a-href" href="./portfolio.html">Portfolio</a>
+            <a class="site-nav link-a-href section-after" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="section-nav">
-            <a class="site-nav link-a-href" href="#">Kontakt</a>
+            <a class="site-nav link-a-href section-after" href="#">Kontakt</a>
           </li>
         </ul>
       </nav>
@@ -417,6 +417,17 @@
       </div>
     </div>
   </footer>
+  <!--animacja-->
+  <div class="backdrop is-hidden" data-modal>
+    <div class="modal">
+      <button type="button" data-modal-close class="close-btn">
+        <svg class="join-icon" width="18" height="18">
+          <use href="./images/sprite/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
