--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
           <span class="logo-style">Web</span>Studio</a>
         <ul class="site-nav link-ul section-item">
           <li class="section-nav">
-            <a class="site-nav link-a-href" href="./index.html">Agencja</a>
+            <a class="site-nav link-a-href section-after" href="./index.html">Agencja</a>
           </li>
           <li class="section-nav">
-            <a class="site-nav current link-a-href" href="./portfolio.html">Portfolio</a>
+            <a class="site-nav current link-a-href section-after" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="section-nav">
-            <a class="site-nav link-a-href" href="#">Kontakt</a>
+            <a class="site-nav link-a-href section-after" href="#">Kontakt</a>
           </li>
         </ul>
       </nav>
@@ -82,138 +82,147 @@
           <ul class="link-ul section-ul-galery">
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-1.jpg"
-                  alt="Technocrack"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-1.jpg" alt="Technocrack" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
-                  <h3 class="section-title-galery">Тechnocrack</h3>
+                  <h3 class="section-title-galery">Technocrack</h3>
                   <p class="section-text-galery">Strona internetowa</p>
                 </div>
               </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-2.jpg"
-                  alt="Grafika New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-2.jpg" alt="grafika new orlean" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">
                     Grafika New Orlean vs Golden Star
                   </h3>
                   <p class="section-text-galery">Dizajn</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-3.jpg"
-                  alt="Restauracja Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-3.jpg" alt="restauracja seafood" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">Restauracja Seafood</h3>
                   <p class="section-text-galery">Aplikacja</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-4.jpg"
-                  alt="Projekt Prime"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-4.jpg" alt="projekt prime" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">Projekt Prime</h3>
                   <p class="section-text-galery">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-5.jpg"
-                  alt="Projekt boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-5.jpg" alt="projekt boxes" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">Projekt Boxes</h3>
                   <p class="section-text-galery">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-6.jpg"
-                  alt="Inspiration has no borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-6.jpg" alt="inspiration has no borders" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">
                     Inspiration has no Borders
                   </h3>
                   <p class="section-text-galery">Strona internetowa</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-7.jpg"
-                  alt="Magazyn Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-7.jpg" alt="magazyn limited edition" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">Magazyn Limited Edition</h3>
                   <p class="section-text-galery">Dizajn</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-8.jpg"
-                  alt="Projekt LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-8.jpg" alt="projekt lab" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">Projekt LAB</h3>
                   <p class="section-text-galery">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <li class="section-li-galery">
               <a href="#" class="link-a-href galery-link">
-                <img
-                  src="./images/portfolio-9.jpg"
-                  alt="Growing Busines"
-                  width="370"
-                  height="294"
-                />
+                <div class="galery-img-overlay">
+                  <img src="./images/portfolio-9.jpg" alt="growing business" width="370" height="294" />
+                  <p class="overlay">
+                    Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa.
+                    Firmy wykorzystują tę platformędo celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji
+                  </p>
+                </div>
                 <div class="galery-box">
                   <h3 class="section-title-galery">Growing Business</h3>
-                  <p class="section-text-galery">Aplikacja</p>
-                </div></a
-              >
+                  <p class="section-text-galery">aplikacja</p>
+                </div>
+              </a>
             </li>
           </ul>
-        </div>
-      </section>
-    </main>
+          </div>
+          </section>
+          </main>
     
 
     <!--footer-->
