--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <div class="modal">
       <button type="button" data-modal-close class="close-btn">
         <svg class="join-icon" width="18" height="18">
-          <use href="./images/sprite/symbol-defs.svg#icon-close-black-18dp-2-1"></use>
+          <use href="./images/sprite/icons.svg#icon-close-black-18dp-2-1"></use>
         </svg>
       </button>
     </div>
